stubbing out very basic ECS

--- a/WhipLib/WhipLib.vcxproj
+++ b/WhipLib/WhipLib.vcxproj
@@ -256,7 +256,9 @@ exit 1</Command>
     <ClInclude Include="Camera.h" />
     <ClInclude Include="CarHelpers.h" />
     <ClInclude Include="Clock.h" />
+    <ClInclude Include="Component.h" />
     <ClInclude Include="DisasmHelpers.h" />
+    <ClInclude Include="Entity.h" />
     <ClInclude Include="FBXExporter.h" />
     <ClInclude Include="GameClock.h" />
     <ClInclude Include="Logging.h" />
@@ -308,6 +310,7 @@ exit 1</Command>
     <ClCompile Include="CarHelpers.cpp" />
     <ClCompile Include="Clock.cpp" />
     <ClCompile Include="DisasmHelpers.cpp" />
+    <ClCompile Include="Entity.cpp" />
     <ClCompile Include="FBXExporter.cpp" />
     <ClCompile Include="GameClock.cpp" />
     <ClCompile Include="Logging.cpp" />
