--- a/WhipLib/WhipLib.vcxproj
+++ b/WhipLib/WhipLib.vcxproj
@@ -262,6 +262,7 @@ exit 1</Command>
     <ClInclude Include="FBXExporter.h" />
     <ClInclude Include="GameClock.h" />
     <ClInclude Include="Logging.h" />
+    <ClInclude Include="NoclipComponent.h" />
     <ClInclude Include="Renderer.h" />
     <ClInclude Include="ShapeComponent.h" />
     <ClInclude Include="ShapeFactory.h" />
@@ -316,6 +317,7 @@ exit 1</Command>
     <ClCompile Include="FBXExporter.cpp" />
     <ClCompile Include="GameClock.cpp" />
     <ClCompile Include="Logging.cpp" />
+    <ClCompile Include="NoclipComponent.cpp" />
     <ClCompile Include="Renderer.cpp" />
     <ClCompile Include="ShapeComponent.cpp" />
     <ClCompile Include="ShapeFactory.cpp" />
