--- a/Roller/Roller.vcxproj.filters
+++ b/Roller/Roller.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="Roller.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GlfwKeyMapper.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="GlfwKeyMapper.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
