adding track component

--- a/WhipLib/WhipLib.vcxproj
+++ b/WhipLib/WhipLib.vcxproj
@@ -304,6 +304,7 @@ exit 1</Command>
     <ClInclude Include="SignType.h" />
     <ClInclude Include="Texture.h" />
     <ClInclude Include="Track.h" />
+    <ClInclude Include="TrackComponent.h" />
     <ClInclude Include="Types.h" />
     <ClInclude Include="Unmangler.h" />
     <ClInclude Include="Vertex.h" />
@@ -333,6 +334,7 @@ exit 1</Command>
     <ClCompile Include="ShapeData.cpp" />
     <ClCompile Include="Texture.cpp" />
     <ClCompile Include="Track.cpp" />
+    <ClCompile Include="TrackComponent.cpp" />
     <ClCompile Include="Unmangler.cpp" />
     <ClCompile Include="VertexArray.cpp" />
     <ClCompile Include="VertexBuffer.cpp" />
