--- a/WhipLib/WhipLib.vcxproj.filters
+++ b/WhipLib/WhipLib.vcxproj.filters
@@ -218,6 +218,9 @@
     <ClInclude Include="WinUserKeyMapper.h">
       <Filter>Header Files\Game</Filter>
     </ClInclude>
+    <ClInclude Include="TrackPosComponent.h">
+      <Filter>Header Files\Entity</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Unmangler.cpp">
@@ -297,6 +300,9 @@
     </ClCompile>
     <ClCompile Include="ShapeFactory.cpp">
       <Filter>Source Files\Rendering</Filter>
+    </ClCompile>
+    <ClCompile Include="TrackPosComponent.cpp">
+      <Filter>Source Files\Entity</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
