--- a/WhipLib/WhipLib.vcxproj
+++ b/WhipLib/WhipLib.vcxproj
@@ -305,6 +305,7 @@ exit 1</Command>
     <ClInclude Include="Texture.h" />
     <ClInclude Include="Track.h" />
     <ClInclude Include="TrackComponent.h" />
+    <ClInclude Include="TrackPosComponent.h" />
     <ClInclude Include="Types.h" />
     <ClInclude Include="Unmangler.h" />
     <ClInclude Include="Vertex.h" />
@@ -335,6 +336,7 @@ exit 1</Command>
     <ClCompile Include="Texture.cpp" />
     <ClCompile Include="Track.cpp" />
     <ClCompile Include="TrackComponent.cpp" />
+    <ClCompile Include="TrackPosComponent.cpp" />
     <ClCompile Include="Unmangler.cpp" />
     <ClCompile Include="VertexArray.cpp" />
     <ClCompile Include="VertexBuffer.cpp" />
