--- a/Roller/Roller.vcxproj
+++ b/Roller/Roller.vcxproj
@@ -203,6 +203,13 @@ exit 1</Command>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GlfwKeyMapper.h" />
+    <ClInclude Include="resource.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="Roller.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="images\fatal.ico" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
