--- a/WhipLib/WhipLib.vcxproj
+++ b/WhipLib/WhipLib.vcxproj
@@ -265,6 +265,7 @@ exit 1</Command>
     <ClInclude Include="GameInput.h" />
     <ClInclude Include="KeyMapper.h" />
     <ClInclude Include="Logging.h" />
+    <ClInclude Include="MathHelpers.h" />
     <ClInclude Include="NoclipComponent.h" />
     <ClInclude Include="Renderer.h" />
     <ClInclude Include="Scene.h" />
@@ -326,6 +327,7 @@ exit 1</Command>
     <ClCompile Include="GameClock.cpp" />
     <ClCompile Include="GameInput.cpp" />
     <ClCompile Include="Logging.cpp" />
+    <ClCompile Include="MathHelpers.cpp" />
     <ClCompile Include="NoclipComponent.cpp" />
     <ClCompile Include="Renderer.cpp" />
     <ClCompile Include="Scene.cpp" />
