--- a/TrackAnalyzer/TrackAnalyzer.vcxproj
+++ b/TrackAnalyzer/TrackAnalyzer.vcxproj
@@ -66,6 +66,7 @@
       <AdditionalLibraryDirectories>..\lib\x64</AdditionalLibraryDirectories>
       <AdditionalDependencies>Shlwapi.lib;WhipLib_staticd.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalOptions>/ignore:4099 %(AdditionalOptions)</AdditionalOptions>
+      <ProgramDatabaseFile>$(IntDir)$(TargetName).pdb</ProgramDatabaseFile>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -88,6 +89,7 @@
       <AdditionalLibraryDirectories>..\lib\x64</AdditionalLibraryDirectories>
       <AdditionalDependencies>Shlwapi.lib;WhipLib_static.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalOptions>/ignore:4099 %(AdditionalOptions)</AdditionalOptions>
+      <ProgramDatabaseFile>$(IntDir)$(TargetName).pdb</ProgramDatabaseFile>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
