adding debug line visualization

--- a/WhipLib/WhipLib.vcxproj
+++ b/WhipLib/WhipLib.vcxproj
@@ -257,6 +257,7 @@ exit 1</Command>
     <ClInclude Include="CarHelpers.h" />
     <ClInclude Include="Clock.h" />
     <ClInclude Include="Component.h" />
+    <ClInclude Include="DebugLineComponent.h" />
     <ClInclude Include="DebugTriComponent.h" />
     <ClInclude Include="DisasmHelpers.h" />
     <ClInclude Include="DriveComponent.h" />
@@ -320,6 +321,7 @@ exit 1</Command>
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="CarHelpers.cpp" />
     <ClCompile Include="Clock.cpp" />
+    <ClCompile Include="DebugLineComponent.cpp" />
     <ClCompile Include="DebugTriComponent.cpp" />
     <ClCompile Include="DisasmHelpers.cpp" />
     <ClCompile Include="DriveComponent.cpp" />
